Added progression bar for register